[gd_scene format=3 uid="uid://bjy0njjncf48q"]

[ext_resource type="Script" uid="uid://cnxj2aj7ll6uq" path="res://UI/Menu/GameOverScreen/game_over.gd" id="1_7yyee"]
[ext_resource type="Texture2D" uid="uid://sdhu3mbm3egx" path="res://UI/Menu/GameOverScreen/sprites/their_sight.png" id="2_vjuuf"]
[ext_resource type="Shader" uid="uid://6h05yowvfaxn" path="res://effects/Shaders/crt_screen.gdshader" id="6_llddu"]
[ext_resource type="Texture2D" uid="uid://dn4a85b0iwp06" path="res://UI/Menu/TitleScreen/sprites/Puppet_floating_UI.png" id="7_lxwcv"]
[ext_resource type="Texture2D" uid="uid://dpyha01i15imw" path="res://UI/Menu/GameOverScreen/sprites/game_over_screen_particles.png" id="8_qmrde"]
[ext_resource type="Texture2D" uid="uid://b0k0wg24jnxwm" path="res://UI/Menu/GameOverScreen/sprites/sweet_dreams_text.png" id="9_1dfex"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lxwcv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lxwcv"]
shader = ExtResource("6_llddu")

[sub_resource type="QuadMesh" id="QuadMesh_qmrde"]
size = Vector2(640, 352)
center_offset = Vector3(320, 176, 0)

[sub_resource type="Animation" id="Animation_1dfex"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PuppetFloating:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(312, 124)]
}

[sub_resource type="Animation" id="Animation_3w6dd"]
resource_name = "puppet_on"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PuppetFloating:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(312, 154), Vector2(312, 152), Vector2(312, 154), Vector2(312, 156)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7y0r"]
_data = {
&"RESET": SubResource("Animation_1dfex"),
&"puppet_on": SubResource("Animation_3w6dd")
}

[sub_resource type="Animation" id="Animation_n7y0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/SweetDreams:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(311, 295)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/SweetDreamsGlow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(311, 295)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/SweetDreamsDistortion:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(311, 295)]
}

[sub_resource type="Animation" id="Animation_xt1si"]
resource_name = "text_on"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/SweetDreams:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(311, 295), Vector2(315, 297), Vector2(307, 297), Vector2(316, 291)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/SweetDreamsGlow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 1.51),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(311, 295), Vector2(310, 296), Vector2(313, 293), Vector2(307, 300), Vector2(312, 297)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/SweetDreamsDistortion:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(311, 295), Vector2(310, 296), Vector2(307, 297), Vector2(316, 291)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0n4j"]
_data = {
&"RESET": SubResource("Animation_n7y0r"),
&"text_on": SubResource("Animation_xt1si")
}

[sub_resource type="Animation" id="Animation_lxwcv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Particles:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Particles:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qmrde"]
resource_name = "particles_on"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Particles:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Particles:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1dfex"]
_data = {
&"RESET": SubResource("Animation_lxwcv"),
&"particles_on": SubResource("Animation_qmrde")
}

[sub_resource type="Animation" id="Animation_vjuuf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frontground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_llddu"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frontground:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c0n4j"]
resource_name = "fade_out"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frontground:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d4p8d"]
resource_name = "fade_out_fast"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frontground:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4p8d"]
_data = {
&"RESET": SubResource("Animation_vjuuf"),
&"fade_in": SubResource("Animation_llddu"),
&"fade_out": SubResource("Animation_c0n4j"),
&"fade_out_fast": SubResource("Animation_d4p8d")
}

[node name="GameOverScreen" type="CanvasLayer" unique_id=1554518854]
process_mode = 3
script = ExtResource("1_7yyee")
title_screen_scene = "uid://cuois8lq6u0de"

[node name="Background" type="ColorRect" parent="." unique_id=1023673689]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Frontground" type="ColorRect" parent="." unique_id=732338225]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TheirPresence" type="Sprite2D" parent="." unique_id=774523912]
position = Vector2(316, 203)
scale = Vector2(2, 2)
texture = ExtResource("2_vjuuf")

[node name="Particles" type="Sprite2D" parent="." unique_id=1978201081]
position = Vector2(320, 177)
scale = Vector2(2, 1.1875)
texture = ExtResource("8_qmrde")
flip_h = true
flip_v = true

[node name="Node2D" type="Node2D" parent="." unique_id=196550236]
use_parent_material = true
position = Vector2(155, 160)
scale = Vector2(0.5, 0.5)

[node name="SweetDreamsDistortion" type="Sprite2D" parent="Node2D" unique_id=698892929]
modulate = Color(1.1038226, 1.1038226, 1.1038226, 1)
position = Vector2(311, 295)
texture = ExtResource("9_1dfex")
hframes = 3
vframes = 5
frame = 2

[node name="SweetDreamsGlow" type="Sprite2D" parent="Node2D" unique_id=1482997456]
modulate = Color(1, 0.8178649, 0.8178649, 0.62600005)
position = Vector2(311, 295)
texture = ExtResource("9_1dfex")
hframes = 3
vframes = 5
frame = 1

[node name="SweetDreams" type="Sprite2D" parent="Node2D" unique_id=695519568]
position = Vector2(311, 295)
texture = ExtResource("9_1dfex")
hframes = 3
vframes = 5

[node name="PuppetFloating" type="Sprite2D" parent="." unique_id=1347974831]
modulate = Color(1, 1, 1, 0.8)
material = SubResource("CanvasItemMaterial_lxwcv")
position = Vector2(312, 124)
texture = ExtResource("7_lxwcv")
hframes = 4
frame = 3

[node name="MeshInstance2D" type="MeshInstance2D" parent="." unique_id=227981329]
material = SubResource("ShaderMaterial_lxwcv")
position = Vector2(0, 1)
mesh = SubResource("QuadMesh_qmrde")

[node name="PuppetAnimations" type="AnimationPlayer" parent="." unique_id=1243672848]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_n7y0r")

[node name="TextAnimations" type="AnimationPlayer" parent="." unique_id=664438642]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_c0n4j")

[node name="ParticlesAnimations" type="AnimationPlayer" parent="." unique_id=1869474828]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_1dfex")
speed_scale = 1.2

[node name="BackgroundAnimations" type="AnimationPlayer" parent="." unique_id=537696547]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_d4p8d")
